# tools

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/: pre-commit-config.yaml  renovate.json5
.github/workflows/: ci.yml
cargo-nx/: Cargo.toml  README.md
cargo-nx/assets/nro/: metadata.toml.template
cargo-nx/assets/nsp/: metadata.toml.template
cargo-nx/default/lib/: Cargo.toml
cargo-nx/default/nro/: Cargo.toml
cargo-nx/default/nsp/: Cargo.toml
cargo-nx/src/: build.rs  cli.rs  cmd.rs  lib.rs  link.rs  main.rs  new.rs  npdm.rs  pack.rs  ui.rs
cargo-nx/src/cmd/: build.rs  build__after_help.md  bundle.rs  bundle__after_help.md  link.rs  link__after_help.md  new.rs  new__after_help.md  tool.rs  tool__after_help.md
cargo-nx/src/cmd/new/: assets.rs  manifest.rs
cargo-nx/src/cmd/tool/: bin2c.rs  bin2c__after_help.md  bin2s.rs  bin2s__after_help.md  build_pfs0.rs  build_pfs0__after_help.md  build_romfs.rs  build_romfs__after_help.md  elf2kip.rs  elf2kip__after_help.md  elf2nro.rs  elf2nro__after_help.md  elf2nso.rs  elf2nso__after_help.md  identifier.rs  nacptool.rs  nacptool__after_help.md  npdmtool.rs  npdmtool__after_help.md
cargo-nx/src/npdm/: hex.rs  kernel_capability.rs
cargo-nx/src/pack/: nacp.rs  npdm.rs  nro.rs  nso.rs  nsp.rs
cargo-nx/tests/: it_bundle.rs  it_elf2nro.rs
cargo-nx/tests/data/: hello-world.nro
docs/__meta__/: README.md  code-pattern.md  code-principle.md  code.md  feat.md
docs/code/: errors-handling.md  errors-reporting.md  logging-errors.md  logging.md  pattern-builder.md  pattern-typestate.md  principle-dry-wet.md  rust-crate.md  (+15 more)
netloader/: Cargo.toml
nx-netloader/: Cargo.toml
nx-object/: Cargo.toml
nx-object/src/: blz.rs  elf.rs  lib.rs  raw.rs  read.rs  write.rs
nx-object/src/elf/: segments.rs
nx-object/src/raw/: build_id.rs  kip.rs  mod0.rs  nacp.rs  npdm.rs  nro.rs  nso.rs  pfs0.rs  romfs.rs
nx-object/src/read/: mod0.rs  nacp.rs  npdm.rs  nro.rs  nso.rs  romfs.rs
nx-object/src/write/: kip.rs  nacp.rs  npdm.rs  nro.rs  nso.rs  pfs0.rs  romfs.rs
(+13 files in other folders)
